# AutoForge-AutoML_Engine-2.0

./: .flake8  .gitignore  CHANGELOG.md  Dockerfile  README.md  __init__.py  bootstrap.py  docker-compose.yml  main.py  pyproject.toml  requirements-lock.txt  requirements.txt
api/: __init__.py  api_integration.py  automl.py  enhanced_automl.py  self_improving_automl.py  truly_bulletproof_automl.py
autoforge/: __init__.py
benchmarking/: __init__.py  automl_benchmark.py  benchmark_integration.py  benchmark_system.py  classical_suite.py  enhanced_benchmarking.py
cli/: __init__.py  cli_integration.py
config/: search_hypers.yml  settings.py
core/: __init__.py  adaptive_resource_manager.py  bulletproof_error_handler.py  estimator.py  training_report.py  unified_automl.py  universal_parameter_handler.py
docs/: SEMVER.md
ensemble/: __init__.py  ensemble_integration.py
examples/: benchmark.py  load_and_predict.py  train_and_report.py  train_tabular.py
execution/: __init__.py  dl_trainer.py  evaluation.py  execution_engine.py  model_search.py  optimizer.py  pipeline_builder.py  preprocessing_pipeline.py  preprocessing_search.py  preprocessing_variants.py
features/: __init__.py  feature_selector.py
input_output/: __init__.py  input_types.py  input_validator.py
intelligence/: __init__.py  data_type_detector.py  dataset_analyzer.py  intelligence_engine.py  meta_optimizer.py  strategy_selector.py
models/: advanced_models.py  registry.py
optimizer/: __init__.py  adaptive_optimizer.py  optimizer_integration.py  optuna_search.py  search_space.py
(+73 files in other folders)
